# paris-rain-mlp

./: .gitignore  README.md  pyproject.toml  requirements.txt  train.py  verify_artifact.py
reports/: metrics.json  model_report.md
src/paris_rain_mlp/: __init__.py  pipeline.py
